src/test/ui/suggestions/return-type.stderr
error[E0308]: mismatched types
  --> $DIR/return-type.rs:20:5
   |
20 |     foo(4 as usize)
   |     ^^^^^^^^^^^^^^^ expected (), found struct `S`
   |
   = note: expected type `()`
              found type `S<usize>`
help: try adding a semicolon
   |
20 |     foo(4 as usize);
   |                    ^
help: try adding a return type
   |
19 | fn bar() -> S<usize> {
   |          ^^^^^^^^^^^

error: aborting due to previous error

